[project]
name = "langchain-decorators"
dynamic = ["version"]
description = "syntactic sugar for langchain"
dependencies = ["langchain-core", "typing-inspect"]
authors = [
    {name = "ju-bezdek", email = "juraj.bezdek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}
keywords = ["langchain"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
Homepage = "https://github.com/ju-bezdek/langchain-decorators"
Repository = "https://github.com/ju-bezdek/langchain-decorators"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "langchain_decorators.__version__"}